--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
     "gh-pages": "^3.1.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
